--- a/tools/dependency-graph/index.html
+++ b/tools/dependency-graph/index.html
@@ -6,6 +6,8 @@
 <script src="https://cdn.jsdelivr.net/npm/cytoscape@3.11.0/dist/cytoscape.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/dagre/0.8.4/dagre.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/cytoscape-dagre@2.2.2/cytoscape-dagre.min.js"></script>
+<script src="render.js"></script>
+<script src="data.js"></script>
 <style>
   body {
     margin: 10 auto;
@@ -46,7 +48,8 @@
   <div id="matches"></div>
 </div>
 <div id="cy"></div>
-<script src="data.js"></script>
-<script src="render.js"></script>
+<script type="application/javascript">
+renderGraph(data)
+</script>
 </body>
 </html>
