--- a/eng/common/InterdependencyGraph.html
+++ b/eng/common/InterdependencyGraph.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Dependency Graph</title>
+<title>Interdependency Graph</title>
 <meta charset="utf-8">
 <script src="https://cdn.jsdelivr.net/npm/cytoscape@3.11.0/dist/cytoscape.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/dagre/0.8.4/dagre.min.js"></script>
